# pipe_tasks

./: .gitignore  COPYRIGHT  Hsc.py  README.rst  SConstruct  astrometry.py  calibrate.py  columnSummary.yaml  columnSummary_LSSTCam_object.yaml  columnSummary_LSSTCam_source.yaml  columnSummary_LSSTComCam_object.yaml  columnSummary_LSSTComCam_source.yaml  detrends.py  distortion.py  forcedPhot.py  hscDc2.py  isr.py  processCcd.py  pyproject.toml  setup.cfg  suprimecam.py
analysis/: hg12_comparison.ipynb  ssobject_qc.ipynb
bin.src/: assembleCoadd.py  assembleCoaddRobust.py  build-high-resolution-hips-qg  build-visit-hips-qg  calibrate.py  characterizeImage.py  coaddition.py  consolidateObjectTable.py  consolidateSourceTable.py  consolidateVisitSummary.py  dcrAssembleCoadd.py  deblendCoaddSources.py  deblendDcrCoaddSources.py  detectDcrCoaddSources.py  dumpTaskMetadata.py  hscCoaddAnalysis.py  hscColorAnalysis.py  hscCompareAnalysis.py  hscCompareVisitAnalysis.py  hscSkyAnalysis.py  hscVisitAnalysis.py  imageDifference.py  imageDifference2.py  imageDifferenceWinter2013.py  ingestCuratedCalibs.py  ingestDefects.py  ingestImagesPgsql.py  ingestQeCurves.py  ingestReferenceCatalog.py  ingestStdTextCalibs.py  insertFakeSources.py  insertFakes.py  makeCoaddTempExp.py  makeDiffim.py  makeGen3DcrSubfilters.py  makeGen3Skymap.py  matchBackgrounds.py  matchVisits.py  measureDcrCoaddSources.py  measureExtendedPsf.py  (+16 more)
config/: processCcd.py  processCcdLsstSim.py  processMasterDetrends.py  suprimecam.py
data/: eph.ini
doc/: .gitignore  SConscript  conf.py  doxygen.conf.in  main.dox  (+4 more)
(+612 files in other folders)
